platform/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Billing_AU__c</fullName>
        <label>Billing AU #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Completion__c</fullName>
        <label>Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Name__c</fullName>
        <label>Request Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Sizing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Store__c</fullName>
        <label>Type of Store</label>
        <picklist>
            <picklistValues>
                <fullName>Denovo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban Flagship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Vendors__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>